--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation "androidx.core:core-ktx:${versions.core_ktx}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.kotlinx_coroutines_android}"
     implementation project(":library")
+    implementation 'com.github.lazyee:AndroidKLib:0.1.22'
 }
