--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ImageFileListActivity" android:screenOrientation="portrait"/>
         <activity android:name=".PdfFileListActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ZipFileListActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".preview.ImagePreviewActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
